--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                         <i class="icon-right ion-quote ion-2x highlight"></i>
                      </div>
                      <div class="testimonial-name">
-                        <img src="img/clients/client-1.png" alt="client">
+                        <img src="img/team/escudo-escuela.jpg" alt="client">
                         <h4 class="white">6to FM ESNAL</h4>
                      </div>
                   </div>
@@ -556,7 +556,7 @@
                         <i class="icon-right ion-quote ion-2x highlight"></i>
                      </div>
                      <div class="testimonial-name">
-                        <img src="img/clients/client-2.png" alt="client">
+                        <img src="img/team/escudo-escuela.jpg" alt="client">
                         <h4 class="white">6to FM ESNAL</h4>
                      </div>
                   </div>
@@ -567,7 +567,7 @@
                         <i class="icon-right ion-quote ion-2x highlight"></i>
                      </div>
                      <div class="testimonial-name">
-                        <img src="img/clients/client-3.png" alt="client">
+                        <img src="img/team/escudo-escuela.jpg" alt="client">
                         <h4 class="white">6to FM ESNAL</h4>
                      </div>
                   </div>
